@@ -1,3 +1,3 @@
 El código del proyecto estará en la carpeta Código, donde se encontrará el main con la base de conocimientos que nos permitirá cumplir los
 requisitos principales que se exigen en el enunciado; en esta carpeta se encontrará también el archivo de pruebas y otra carpeta que contiene los TDAs
- mencionados en la sección anterior "TDAs". No se usará ningún módulo externo al proyecto y el interpretador usado será "swipl".
+ mencionados en la sección anterior "TDAs". No se usará ningún módulo externo al proyecto y el interpretador usado será "swipl" versión 8.4.3.
